[package]
name = "stac-geoparquet-for-source-coop"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4", features = ["derive"] }
futures = "0.3.32"
indicatif = "0.17"
object_store = { version = "0.12.0", features = ["azure"] }
parquet = { version = "56.0.0", features = ["arrow", "async", "object_store"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
stac = { git = "https://github.com/stac-utils/rustac" , branch = "hash" }
stac-io = { git = "https://github.com/stac-utils/rustac" , branch = "hash", features = ["geoparquet", "store"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
